# AI-for-Equity-Challenges-Processing-Example

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  .tool-versions  Dockerfile  README.md  aider.CONVENTIONS.md  bash  build_and_push.sh  build_and_run_aws.py  debug_entry.py  docker-compose.yml  pyproject.toml  python  requirements.txt  run.sh  setup.sh  yaml
.github/workflows/: ml-pipeline.yml
account-test-scripts/: README.md  pyproject.toml  run.sh  testS3.py  testSageMaker.py  test_runner.py
code/: .env.example  Dockerfile  docker-compose.yaml
code/src/: .env.example  build_and_run_aws.py  debug_entry.py  download_data.py  pyproject.toml  run_pipeline.py
code/src/data/: OutsmartingOutbreaks_StarterNotebook_AWS.ipynb  SampleSubmission-small-sample.csv  Test-small-sample.csv  Train-small-sample.csv  notebook2.txt  noteboot.txt  toilet-small-sample.csv  waste_management-small-sample.csv  water_sources-small-sample.csv
code/src/docker/: docker-compose.yml
code/src/sua_outsmarting_outbreaks/: cli.py  debug_entry.py  pipeline.py  run_local.py
code/src/sua_outsmarting_outbreaks/data/: data_prep.py
code/src/sua_outsmarting_outbreaks/models/: evaluate.py  train.py
code/src/sua_outsmarting_outbreaks/predict/: predict.py
code/src/sua_outsmarting_outbreaks/utils/: aws_utils.py  batch_queues.py  config.py  constants.py  logging_utils.py  spatial.py  visualization.py
code/src/tests/: test_aws_utils.py  test_data_prep.py
docs/: aws-signin-guide.md  console-development-guide.md  docker-development-guide.md  local-development-guide.md  sagemaker-studio-guide.md  troubleshooting-guide.md
docs/aws-pricing/: instance_data.json  instance_pricing.md
docs/images/: README.md
ignore_me/: outsmarting_eval.py  outsmarting_predict.py  outsmarting_sagemaker_execute.py  outsmarting_train.py
notebooks/: outsmarting_data_prep.py  outsmarting_eval.py  outsmarting_predict.py  outsmarting_sagemaker_execute.py  outsmarting_train.py
tests/: conftest.py
utils/: aws_utils.py
