[project]
name = "sua-outsmarting-outbreaks"
version = "0.1.0"
description = "ML pipelines for AWS using SageMaker"
requires-python = ">=3.10.0"
dependencies = [
    "boto3==1.34.11",
    "sagemaker==2.196.0", 
    "numpy==1.26.3",
    "pandas==2.1.4",
    "scikit-learn==1.3.2",
    "scipy==1.11.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["notebooks"]

[tool.hatch.metadata]
allow-direct-references = true
