[project]
name = "sua-outsmarting-outbreaks"
version = "0.1.0"
description = "ML pipelines for AWS using SageMaker"
requires-python = ">=3.10.0"
dependencies = [
    "boto3>=1.34.14",
    "sagemaker>=2.201.0",
    "numpy>=1.26.4",
    "pandas>=2.2.0",
    "scikit-learn>=1.4.0",
    "scipy>=1.12.0",
    "joblib>=1.3.2",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.13",
    "pytest>=7.4.4",
    "pre-commit>=3.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["notebooks"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["notebooks"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --doctest-modules"
testpaths = [
    "tests",
]
python_files = ["test_*.py"]

[dependency-groups]
dev = [
    "ruff>=0.9.0",
]
