[project]
name = "account-test-scripts"
version = "0.1.0"
description = "AWS account testing utilities"
requires-python = ">=3.10.0"
dependencies = [
    "boto3>=1.34.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py310"
line-length = 120
