[project]
name = "account-test-scripts"
version = "0.1.0"
description = "AWS account testing utilities"
requires-python = ">=3.10.0"
dependencies = [
  "boto3>=1.34.162",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.1.13",
  "pre-commit>=3.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.ruff]
target-version = "py310"
line-length = 120
