[project]
name = "sua-outsmarting-outbreaks"
version = "0.1.0"
description = "ML pipelines for AWS using SageMaker"
requires-python = ">=3.10.0"
dependencies = [
    "boto3>=1.34.162",
    "joblib>=1.4.2",
    "numpy>=1.26.4",
    "pandas>=2.2.3",
    "python-dotenv>=1.0.0",
    "pydantic>=2.10.5",
    "sagemaker>=2.236.0",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.0",
    "pytest>=8.3.4",
    "pydantic-settings>=2.1.0",
    "click>=8.1.7",
    "fsspec>=2024.1.0",
    "s3fs>=2024.1.0",
]

[project.scripts]
sua-pipeline = "sua_outsmarting_outbreaks.cli:cli"

[project.optional-dependencies]
dev = [
    "ruff>=0.1.13",
    "pre-commit>=3.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings 
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "D",   # pydocstyle
    "ANN", # flake8-annotations
    "S",   # flake8-bandit
    "BLE", # flake8-blind-except
    "FBT", # flake8-boolean-trap
    "COM", # flake8-commas
    "C90", # mccabe
    "T20", # flake8-print
    "PT",  # flake8-pytest-style
    "Q",   # flake8-quotes
    "RET", # flake8-return
    "SIM", # flake8-simplify
    "ARG", # flake8-unused-arguments
    "ERA", # eradicate
    "PL",  # pylint
    "RUF", # ruff-specific rules
]
ignore = [
    "D100",    # Missing docstring in public module
    "D104",    # Missing docstring in public package
    "PLR0913", # Too many arguments to function call
    "D203",    # Incompatible with D211
    "D213",    # Incompatible with D212
    "COM812",  # May conflict with formatter
    "S603",    # `subprocess` call: check for execution of untrusted input
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["sua_outsmarting_outbreaks"]

[dependency-groups]
dev = [
    "ruff>=0.9.0",
]
